# CTK

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CTKConfig.cmake.in  CTKConfig.h.in  CTKConfigVersion.cmake.in  CTKPluginUseFile.cmake.in  CTestConfig.cmake  LICENSE  NOTICE  README  README.md  README.rst  SuperBuild.cmake  UseCTK.cmake.in  appveyor.yml  circle.yml  ctkConfig.h.in  ctkLogo.icns
Applications/ctkCLIPluginExplorer/: CMakeLists.txt  ctkCLIPluginExplorer.cpp  ctkCLIPluginExplorer.cxx  ctkCLIPluginExplorerMain.cpp  ctkCLIPluginExplorerMainWindow.cpp  ctkCLIPluginExplorerMainWindow.h  ctkCLIPluginExplorerMainWindow.ui  target_libraries.cmake
Applications/ctkCommandLineModuleExplorer/: CMakeLists.txt  ctkCLModuleExplorerMainWindow.cpp  ctkCLModuleExplorerMainWindow.h  ctkCLModuleExplorerMainWindow.ui  ctkCmdLineModuleExplorerConstants.cpp  ctkCmdLineModuleExplorerConstants.h  ctkCmdLineModuleExplorerDirectorySettings.cpp  ctkCmdLineModuleExplorerDirectorySettings.h  ctkCmdLineModuleExplorerDirectorySettings.ui  ctkCmdLineModuleExplorerGeneralModuleSettings.cpp  ctkCmdLineModuleExplorerGeneralModuleSettings.h  ctkCmdLineModuleExplorerGeneralModuleSettings.ui  ctkCmdLineModuleExplorerMainWindow.cpp  ctkCmdLineModuleExplorerMainWindow.h  ctkCmdLineModuleExplorerMainWindow.ui  ctkCmdLineModuleExplorerModulesSettings.cpp  ctkCmdLineModuleExplorerModulesSettings.h  ctkCmdLineModuleExplorerModulesSettings.ui  ctkCmdLineModuleExplorerOutputText.cpp  ctkCmdLineModuleExplorerOutputText.h  ctkCmdLineModuleExplorerProgressListWidget.cpp  ctkCmdLineModuleExplorerProgressListWidget.h  ctkCmdLineModuleExplorerProgressWidget.cpp  ctkCmdLineModuleExplorerProgressWidget.h  ctkCmdLineModuleExplorerProgressWidget.ui  ctkCmdLineModuleExplorerShowXmlAction.cpp  ctkCmdLineModuleExplorerShowXmlAction.h  ctkCmdLineModuleExplorerTabList.cpp  ctkCmdLineModuleExplorerTabList.h  ctkCmdLineModuleExplorerTreeWidget.cpp  ctkCmdLineModuleExplorerTreeWidget.h  ctkCmdLineModuleExplorerUtils.cpp  ctkCmdLineModuleExplorerUtils.h  ctkCommandLineModuleExplorerMain.cpp  target_libraries.cmake
Applications/ctkDICOM/: CMakeLists.txt  ctkDICOM.cpp  ctkDICOM.cxx  ctkDICOMMain.cpp  target_libraries.cmake
Applications/ctkDICOMDemoSCU/: CMakeLists.txt  ctkDICOMDemoSCU.cpp  ctkDICOMDemoSCUMain.cpp  target_libraries.cmake
Applications/ctkDICOMHost/: CMakeLists.txt  ctkDICOMHostMain.cpp  ctkDICOMHostMainLogic.cpp  ctkDICOMHostMainLogic.h  ctkDICOMHostMainWidget.ui  target_libraries.cmake
Applications/ctkEventBusDemo/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  ctkEventBusDemoMain.cpp  ctkEventBusDemoMainWindow.cpp  ctkEventBusDemoMainWindow.h  ctkEventBusDemoMainWindow.ui  target_libraries.cmake
Applications/ctkExampleHost/: CMakeLists.txt  ctkExampleHostMain.cpp  ctkExampleHostMainWindow.ui  ctkHostAppExampleWidget.cpp  ctkHostAppExampleWidget.h  ctkHostAppExampleWidget.ui  target_libraries.cmake
Applications/ctkPluginBrowser/: CMakeLists.txt  ctkPluginBrowser.cpp  ctkPluginBrowser.cxx  ctkPluginBrowser.h  ctkPluginBrowserEditors.cpp  ctkPluginBrowserEditors.cxx  ctkPluginBrowserEditors.h  ctkPluginBrowserMain.cpp  ctkPluginBrowserMain.cxx  ctkPluginBrowserMainWindow.ui  ctkPluginBrowserResources.qrc  ctkPluginResourcesTreeModel.cpp  ctkPluginResourcesTreeModel.cxx  ctkPluginResourcesTreeModel.h  ctkPluginTableModel.cpp  ctkPluginTableModel.cxx  ctkPluginTableModel.h  ctkQtResourcesTreeModel.cpp  ctkQtResourcesTreeModel.cxx  ctkQtResourcesTreeModel.h  target_libraries.cmake
Applications/ctkPluginGenerator/: CMakeLists.txt  DefaultLicense.txt  ctkPluginGenerator.cpp  ctkPluginGenerator.h  ctkPluginGenerator.qrc  ctkPluginGeneratorMain.cpp  ctkPluginGeneratorMainWindow-pre470.ui  ctkPluginGeneratorMainWindow.ui  ctkPluginGeneratorOptionsDialog.cpp  ctkPluginGeneratorOptionsDialog.ui  ctkPluginGeneratorOptionsDialog_p.h  ctkPluginGenerator_p.h  target_libraries.cmake
Applications/ctkQtTesting/: CMakeLists.txt  Test.xml  ctkQtTestingMain.cpp  ctkQtTestingMainWindow.cpp  ctkQtTestingMainWindow.h  ctkQtTestingMainWindow.ui  target_libraries.cmake
Applications/ctkSimplePythonShell/: CMakeLists.txt  ctkSimplePythonManager.cpp  ctkSimplePythonManager.cpp.in  ctkSimplePythonManager.h  ctkSimplePythonQtDecorators.h  ctkSimplePythonShellConfigure.h.in  ctkSimplePythonShellMain.cpp  ctkTestWrappedQInvokable.h  ctkTestWrappedQListOfVTKObject.h  ctkTestWrappedQProperty.h  ctkTestWrappedSlot.h  ctkTestWrappedVTKObserver.h  ctkTestWrappedVTKQInvokable.h  ctkTestWrappedVTKSlot.h  target_libraries.cmake
Applications/ctkXNATBrowser/: CMakeLists.txt  ctkXNATBrowserMain.cpp  ctkXNATBrowserMainWindow.cpp  ctkXNATBrowserMainWindow.h  ctkXNATBrowserMainWindow.ui
Applications/ctkXnatTreeBrowser/: CMakeLists.txt  ctkXnatTreeBrowserMain.cpp  ctkXnatTreeBrowserMainWindow.cpp  ctkXnatTreeBrowserMainWindow.h  ctkXnatTreeBrowserMainWindow.ui  target_libraries.cmake
Documentation/: CMakeBuildSystem.dox  CMakeDoxygenFilter.cpp  CMakeLists.txt  CTKMainPage.dox  Doxyfile.txt.in  generate_doc.cmake.in
Libs/Core/: CMakeLists.txt  ctkAbstractFactory.h  ctkAbstractFactory.tpp  ctkAbstractFileBasedFactory.h  ctkAbstractFileBasedFactory.tpp  ctkAbstractJob.cpp  ctkAbstractJob.h  ctkAbstractLibraryFactory.h  ctkAbstractLibraryFactory.tpp  ctkAbstractObjectFactory.h  ctkAbstractObjectFactory.tpp  ctkAbstractPluginFactory.h  ctkAbstractPluginFactory.tpp  ctkAbstractQObjectFactory.h  ctkAbstractQObjectFactory.tpp  ctkAbstractScheduler.cpp  ctkAbstractScheduler.h  ctkAbstractScheduler_p.h  ctkAbstractWorker.cpp  ctkAbstractWorker.h  ctkBackTrace.cpp  ctkBackTrace.h  ctkBinaryFileDescriptor.cpp  ctkBinaryFileDescriptor.h  ctkBooleanMapper.cpp  ctkBooleanMapper.h  ctkCallback.cpp  ctkCallback.h  ctkCheckableModelHelper.cpp  ctkCheckableModelHelper.h  ctkCommandLineParser.cpp  ctkCommandLineParser.h  ctkCompatibility_p.h  ctkCompilerDetections_p.h  ctkComplementMapper.cpp  ctkComplementMapper.h  ctkCorePythonQtDecorators.h  ctkCoreSettings.cpp  ctkCoreSettings.h  ctkCoreTestingMacros.h  (+70 more)
(+3152 files in other folders)
